<resources>
    <string name="app_name">Арбайт</string>
    <string name="app_name_in_launcher">Арбайт</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirm">Подтвердить</string>
    <string name="copy">Копировать</string>
    <string name="show">Показать</string>
    <string name="collapse">Свернуть</string>
    <string name="done">Готово</string>
    <string name="back">Назад</string>
    <string name="pay">Оплатить</string>
    <string name="unknown_server_error">Ошибка от сервера: %1$s</string>
    <string name="internet_is_not_available">Соединение с интернетом отсутствует!</string>
    <string name="system_error">Произошла системная ошибка: %1$s</string>
    <string name="server_validation_error">Сервер вернул: %1$s, %2$s</string>
    <string name="people">%1$d чел</string>
    <string name="in">в</string>
    <string name="tomorrow">Завтра</string>
    <string name="hourly_suffix"> р/ч</string>
    <string name="daily_suffix"> сдельно</string>
    <string name="empty_phone">Укажите номер телефона!</string>
    <string name="wrong_phone">Задайте корректный российский номер телефона!</string>
    <string name="sber">Сбербанк</string>
    <string name="another_bank">Другой банк</string>
    <string name="mate">Напарник</string>
    <string name="month_jan">янв</string>
    <string name="month_feb">фев</string>
    <string name="month_mar">мар</string>
    <string name="month_apr">апр</string>
    <string name="month_may">мая</string>
    <string name="month_jun">июня</string>
    <string name="month_jul">июля</string>
    <string name="month_aug">авг</string>
    <string name="month_sep">сен</string>
    <string name="month_oct">окт</string>
    <string name="month_nov">ноя</string>
    <string name="month_dec">дек</string>
    <string name="reg_registration">Регистрация</string>
    <string name="reg_first_name">Имя</string>
    <string name="reg_phone">Телефон для связи</string>
    <string name="reg_phone_whatsapp">Телефон в Whatsapp</string>
    <string name="reg_b_same">Тот же</string>
    <string name="reg_birth_date">Дата рождения</string>
    <string name="reg_age">Возраст (полных лет)</string>
    <string name="reg_debit_card">Карта/телефон</string>
    <string name="reg_wrong_debit_card">Введите правильный номер карты или телефона, привязанного к карте</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_ok">OK</string>
    <string name="reg_empty_birth_date">Укажите дату рождения! Пример правильной даты: 15.06.1995</string>
    <string name="reg_wrong_birth_date">Неправильная дата рождения! Пример правильной даты: 15.06.1995</string>
    <string name="reg_wrong_age">Мы принимаем работников от %1$d до %2$d лет!</string>
    <string name="reg_invalid_password_length">Длина пароля должна быть не меньше %1$d символов и не больше %2$d</string>
    <string name="reg_empty_first_name">Укажите имя!</string>
    <string name="reg_empty_last_name">Укажите фамилию!</string>
    <string name="reg_empty_phone_whatsapp">Укажите номер телефона в Whatsapp!</string>
    <string name="reg_empty_password">Придумайте пароль длиной от %1$d до %2$d символов!</string>
    <string name="reg_wrong_first_name">Имя должно состоять ТОЛЬКО из русских букв, пробелы не допускаются</string>
    <string name="reg_wrong_last_name">Фамилия должна состоять ТОЛЬКО из русских букв, пробелы не допускаются</string>
    <string name="reg_wrong_first_name_length">Имя должно быть не короче %1$d символов и не длиннее %2$d</string>
    <string name="reg_wrong_last_name_length">Фамиля должна быть не короче %1$d символов и не длиннее %2$d</string>
    <string name="reg_user_data_agreement">Нажимая кнопку Готово вы соглашаетесь на предоставление введенных данных</string>
    <string name="phone_conf_tv_incoming_call">Нажмите кнопку "Получить код" и к вам поступит звонок.
        Последние 4 цифры номера - это КОД. Введите его в поле для подтверждения.</string>
    <string name="phone_conf_code">Код</string>
    <string name="phone_conf_get_code">Получить код</string>
    <string name="phone_conf_empty_code">Код не должен быть пустым :)</string>
    <string name="phone_conf_wrong_length">Код должен состоять из 4 символов :)</string>
    <string name="phone_conf_not_requested_call">Сначала получите код :)</string>
    <string name="apps_time">Время</string>
    <string name="apps_address">Адрес</string>
    <string name="apps_worker_income">Ставка</string>
    <string name="apps_workers">Кол-во чел</string>
    <string name="apps_no_open_apps">На данный момент заявок нет</string>
    <string name="apps_today">Сегодня</string>
    <string name="apps_tomorrow">Завтра (%1$d шт., жми)</string>
    <string name="apps_tomorrow_no_press">Завтра (%1$d шт)</string>
    <string name="apps_open">Открытые</string>
    <string name="apps_closed">Закрытые</string>
    <string name="apps_finished">Завершенные</string>
    <string name="apps_action_bar_title">Заявки</string>
    <string name="apps_cannot">Вы не можете брать заявки</string>
    <string name="apps_commission">Комиссия: %1d</string>
    <string name="apps_panel_title">Взятые заявки</string>
    <string name="apps_commission_confirmation">Комиссия: %1d, подтверждение...</string>
    <string name="poll_service_channel_id">Поиск заявок</string>
    <string name="poll_new_app_channel_id">Новая заявка</string>
    <string name="poll_new_app_without_sound_channel_id">Новая заявка без звука</string>
    <string name="poll_deleted_app_channel_id">Заявка удалена</string>
    <string name="poll_deleted_app_without_sound_channel_id">Заявка удалена без звука</string>
    <string name="poll_removed_from_app_channel_id">Вы удалены с заявки</string>
    <string name="poll_removed_from_app_without_sound_channel_id">Вы удалены с заявки без звука</string>
    <string name="poll_deleted_app">Заявка "%1s" была отменена</string>
    <string name="poll_removed_from_app">Вы были удалены с заявки "%1s"</string>
    <string name="poll_confirmation_notification">Подтвердите свой выход</string>
    <string name="poll_confirmation_notification_text">на заявку</string>
    <string name="app_address"><![CDATA[<u>Адрес:</u> %s]]></string>
    <string name="app_time"><![CDATA[<u>Время:</u> %s]]></string>
    <string name="app_money"><![CDATA[<u>Ставка:</u> %s]]></string>
    <string name="app_commission"><![CDATA[<u>Комиссия:</u> %s]]></string>
    <string name="app_pay_method"><![CDATA[<u>Оплата:</u> %s]]></string>
    <string name="app_pay_from_who"><![CDATA[<u>Оплачивает:</u> %s]]></string>
    <string name="app_description"><![CDATA[<u>Описание:</u> %s]]></string>
    <string name="app_on_card">на карту</string>
    <string name="app_cash">наличные</string>
    <string name="app_worker_count"><![CDATA[<u>Кол-во работников:</u> %s]]></string>
    <string name="app_enroll">Записаться</string>
    <string name="app_refuse">Отказаться</string>
    <string name="app_call_client">Позвонить заказчику</string>
    <string name="app_action_bar_title">Заявка</string>
    <string name="app_you_are_enrolled">Вы записаны</string>
    <string name="app_no_card">без карты</string>
    <string name="app_from_dispatcher">диспетчер</string>
    <string name="app_from_client">клиент</string>
    <string name="app_when_call">Звонить(писать) только по приезду!</string>
    <string name="app_could_not_enroll_cause_interval">Нельзя записаться: между заявками меньше часа</string>
    <string name="app_could_not_enroll_cause_refuses">Нельзя записаться: частая запись/отмена заявок</string>
    <string name="app_could_not_enroll_cause_unknown">Нельзя записаться: неизвестная проблема</string>
    <string name="app_end">Заявка завершена</string>
    <string name="app_end_pay_by_client"><![CDATA[Часов отработано: %1$d <br> Денег получено: %2$d]]></string>
    <string name="app_end_pay_by_dispatcher">
        <![CDATA[Часов отработано: %1$d <br> Диспетчер переведет: %2$d]]>
    </string>
    <string name="app_end_commission">Комиссия: %1$d</string>
    <string name="app_end_commission_confirmation">Комиссия: %1$d, оплачена, ждите подтверждения...</string>
    <string name="app_end_commission_payed">Комиссия: %1$d, оплачена</string>
    <string name="app_is_gone">Заявка собрана или удалена</string>
    <string name="app_you_were_removed">Вы были удалены с заявки</string>
    <string name="app_deleted">Заявка была отменена</string>
    <string name="app_write_to_client">Написать</string>
    <string name="app_residue">Остаток комиссии: %d</string>
    <string name="app_could_not_enroll_cause_commission">Нельзя записаться: комиссия не оплачена</string>
    <string name="app_could_not_enroll_cause_not_confirmed_pay">Нельзя записаться: оплата комиссии не подтверждена</string>
    <string name="app_confirm">свой выход на заявку</string>
    <string name="app_status_need_confirm">Подтвердите свой выход</string>
    <string name="app_sub_status_need_confirm">За 2 часа до начала подтвердите заявку! (появится кнопка в заявке)</string>
    <string name="app_can_not_enroll_cause_banned">Вы заблокированы до: %s</string>
    <string name="log_login">Войти</string>
    <string name="log_phone">Номер телефона</string>
    <string name="dcd_another_debit_card">Другая карта/тел</string>
    <string name="dcd_choose_debit_card">Выберите карту</string>
    <string name="dcd_no_card">Без карты</string>
    <string name="dcd_select_debit_card">Укажите карту</string>
    <string name="dcd_choose_or_set">Введите номер карты или выберите ее из списка</string>
    <string name="dcd_set_valid_dc">Введите правильный номер карты или телефона</string>
    <string name="login_menu_registration">Регистрация</string>
    <string name="reg_menu_login">Вход</string>
    <string name="df_are_you_sure">Вы уверены?</string>
    <string name="com_sberbank">На сбербанк</string>
    <string name="com_balance">На баланс</string>
    <string name="comsber_tel">Телефон, привязанный к карте: %s</string>
    <string name="comsber_card">Номер карты: %s</string>
    <string name="comsber_initials">Получатель: Дмитрий Владимирович К.</string>
    <string name="comsber_sber_transfer">Перевод без комиссии: %s</string>
    <string name="comsber_bank_transfer">С комиссией (другой банк): %s</string>
    <string name="comsber_transfer">После перевода нажмите кнопку \"Оплатил\",
        выберите банк и укажите ФИО отправителя или последние 4 цифры карты (если перевод с другого банка)</string>
    <string name="comsber_payed">Оплатил</string>
    <string name="combal_desc">Пополнить баланс мегафона</string>
    <string name="combal_tel">Номер телефона: %s</string>
    <string name="combal_without_commission">Пополнение без комиссии: %s</string>
    <string name="combal_atm">С комиссией (банкомат): %s</string>
    <string name="combal_fill_in">После пополнения нажмите кнопку \"Оплатил\" и укажите время операции</string>
    <string name="combal_time">Запомните/запишите время операции, указанное в чеке: час:минута:секунда</string>
    <string name="conf_main">Подтверждение оплаты</string>
    <string name="conf_date">Дата</string>
    <string name="conf_confirm">Подтвердить</string>
    <string name="conf_time">Час:минута:секунда</string>
    <string name="conf_fio">Имя Отчество Ф.</string>
    <string name="conf_card">последние 4 цифры</string>
    <string name="conf_empty_fio">Введите Имя Отчество Фамилию (сокращенно)</string>
    <string name="conf_wrong_card">Введите последние 4 цифры вашей карты</string>
    <string name="conf_wrong_time">Введите час, минуту, секунду как указано в чеке. Пример, 02:15:09</string>
    <string name="conf_your_card">Введите реквизиты или последние 4 цифры карты, с которой был сделан перевод. Если за вас оплатили, можете оставить свои реквизиты или 4 цифры или написать - За меня оплатили.</string>
    <string name="rules_header">Правила</string>
</resources>