<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
    <TextView
        android:id="@+id/tv_dar_are_you_sure"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/df_are_you_sure"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_dar_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yes">
        </Button>
        <Button
            android:id="@+id/bt_dar_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no">
        </Button>
    </LinearLayout>
</LinearLayout>