<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
    <TextView
        android:id="@+id/tv_dcd_registration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dcd_select_debit_card"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dcd_debit_cards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="visible" />

    <in.arbait.MonitoringEditText
        android:id="@+id/met_dcd_another_debit_card"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="19"
        android:hint="@string/dcd_another_debit_card"
        android:inputType="phone"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:cursorVisible="true"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_dcd_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialog_ok">
        </Button>
        <Button
            android:id="@+id/bt_dcd_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialog_cancel">
        </Button>
    </LinearLayout>
</LinearLayout>